@@ -704,10 +704,7 @@ void recompute_freq(int v)
 			f = freq_table_tuning[tp][note];
 			break;
 		case 1:
-			if (current_temper_keysig < 8)
-				f = freq_table_pytha[current_freq_table][note];
-			else
-				f = freq_table_pytha[current_freq_table + 12][note];
+			f = freq_table_pytha[current_freq_table][note];
 			break;
 		case 2:
 			if (current_temper_keysig < 8)
@@ -1722,10 +1719,7 @@ static int select_play_sample(Sample *splist,
 			f = freq_table_tuning[tp][note];
 			break;
 		case 1:
-			if (current_temper_keysig < 8)
-				f = freq_table_pytha[current_freq_table][note];
-			else
-				f = freq_table_pytha[current_freq_table + 12][note];
+			f = freq_table_pytha[current_freq_table][note];
 			break;
 		case 2:
 			if (current_temper_keysig < 8)
